--- a/InventoryManagement/InventoryManagement.csproj
+++ b/InventoryManagement/InventoryManagement.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="bootstrap" Version="5.3.8" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
         <PrivateAssets>all</PrivateAssets>
