--- a/InventoryManagement/InventoryManagement.csproj
+++ b/InventoryManagement/InventoryManagement.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Items\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
